--- a/index.html
+++ b/index.html
@@ -3,50 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
-   	
-<table class="tg">
-  <tr>
-  	<th></th>
-    <th contenteditable class="rotate">
-    	<div><span>Column header 1</span></div>
-    </th>
-    <th class="rotate"></th>
-    <th class="rotate"></th>
-  </tr>
-  <tr>
-  	<th contenteditable class="row-header">Designed research</th>
-    <td class="b" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-  </tr>
-  <tr>
-  	<th contenteditable class="row-header">Performed research</th>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-  </tr>
-  <tr>
-  	<th contenteditable class="row-header">Contributed new reagents/analytic tools</th>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-  </tr>
-  <tr>
-  	<th contenteditable class="row-header">Analyzed data</th>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-  </tr>
-  <tr>
-  	<th contenteditable class="row-header">Wrote the paper</th>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-    <td class="w" onclick="chgBkg(this);"></td>
-  </tr>
-</table>
+
+<div>
+  <h1>Design your table here:</h1>
+  </div> 	
+<div id="table">
+  <link rel="stylesheet" href="style.css">
+  <table class="tg table-header-rotated">
+    <tr>
+    	<th></th>
+      <th class="rotate">
+      	<div><span>Birman</span></div>
+      </th>
+      <th class="rotate">
+        <div><span>Gardner</span></div>
+      </th>
+
+    </tr>
+    <tr>
+    	<th class="row-header">Designed research</th>
+      <td class="b" onclick="chgBkg(this);"></td>
+      <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+    	<th class="row-header">Performed research</th>
+      <td class="w" onclick="chgBkg(this);"></td>
+      <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+    	<th class="row-header">Contributed new reagents/analytic tools</th>
+      <td class="w" onclick="chgBkg(this);"></td>
+      <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+    	<th class="row-header">Analyzed data</th>
+      <td class="w" onclick="chgBkg(this);"></td>
+      <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+    	<th class="row-header">Wrote the paper</th>
+      <td class="w" onclick="chgBkg(this);"></td>
+      <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+  </table>
+</div>
+
+<div>
+  <h1>Code (linked CSS):</h1>
+  <textarea readonly rows="25" id="raw" class="rawtext"></textarea>
+</div>
   </body>
 </html>
