--- a/index.html
+++ b/index.html
@@ -26,27 +26,37 @@
     <tr>
     	<th class="row-header">Designed research</th>
       <td class="b" onclick="chgBkg(this);"></td>
-      <td class="w" onclick="chgBkg(this);"></td>
+      <td class="b" onclick="chgBkg(this);"></td>
     </tr>
     <tr>
-    	<th class="row-header">Performed research</th>
-      <td class="w" onclick="chgBkg(this);"></td>
-      <td class="w" onclick="chgBkg(this);"></td>
-    </tr>
-    <tr>
-    	<th class="row-header">Contributed new reagents/analytic tools</th>
-      <td class="w" onclick="chgBkg(this);"></td>
+    	<th class="row-header">Performed experiments</th>
+      <td class="b" onclick="chgBkg(this);"></td>
       <td class="w" onclick="chgBkg(this);"></td>
     </tr>
     <tr>
     	<th class="row-header">Analyzed data</th>
-      <td class="w" onclick="chgBkg(this);"></td>
+      <td class="b" onclick="chgBkg(this);"></td>
       <td class="w" onclick="chgBkg(this);"></td>
     </tr>
     <tr>
-    	<th class="row-header">Wrote the paper</th>
+    	<th class="row-header">Prepared figures</th>
+      <td class="b" onclick="chgBkg(this);"></td>
       <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+      <th class="row-header">Interpreted results</th>
+      <td class="b" onclick="chgBkg(this);"></td>
+      <td class="b" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+    	<th class="row-header">Wrote the initial draft</th>
+      <td class="b" onclick="chgBkg(this);"></td>
       <td class="w" onclick="chgBkg(this);"></td>
+    </tr>
+    <tr>
+      <th class="row-header">Edited/revised manuscript</th>
+      <td class="b" onclick="chgBkg(this);"></td>
+      <td class="b" onclick="chgBkg(this);"></td>
     </tr>
   </table>
 </div>
