--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 </div>
 
 <div>
-  <h1>Code (linked CSS):</h1>
-  <textarea readonly rows="25" id="raw" class="rawtext"></textarea>
+  <h1>Code (click to copy, CSS is linked):</h1>
+  <textarea readonly rows="10" id="raw" class="rawtext" onclick="copy();"></textarea>
 </div>
   </body>
 </html>
